<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/activity_margin_small"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/activity_sign_in_hint_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"/>
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_user_name"
                    android:drawablePadding="@dimen/activity_margin_small"
                    android:drawableStart="@drawable/ic_user_name"
                    android:hint="@string/activity_sign_in_hint_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@drawable/rounded_button"
                    android:elevation="@dimen/button_elevation"
                    android:gravity="center"
                    android:padding="@dimen/button_padding"
                    android:text="@string/activity_sign_in_button_submit"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_extra_large"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:gravity="end"
                    android:padding="@dimen/activity_margin_small"
                    android:text="@string/activity_sign_in_text_forgot_password"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_medium"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
