<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="visible">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MyApp.ActionBar"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:animateLayoutChanges="true"
                android:background="@android:color/transparent"
                android:contentInsetEnd="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStart="0dp"
                android:visibility="visible"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">
                <RelativeLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:id="@+id/rlBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back"
                            android:visibility="visible"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@+id/ivBack"
                            android:layout_toRightOf="@+id/ivBack"
                            android:gravity="center_vertical"
                            android:text="@string/activity_contact_us_back_button"
                            android:textColor="@color/text_color_white"
                            android:textSize="@dimen/text_size_small"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/activity_contact_us_title"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBar">
            <LinearLayout
                android:id="@+id/llInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin"
                    android:scaleType="center"
                    android:src="@drawable/logoicon"/>

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_user_name"
                    android:drawablePadding="@dimen/activity_margin_small"
                    android:drawableStart="@drawable/ic_user_name"
                    android:hint="@string/activity_contact_hint_full_name"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/activity_margin_small"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/activity_contact_hint_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"/>


                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="@dimen/activity_margin_small"
                    android:drawableStart="@drawable/ic_phone"
                    android:hint="@string/activity_contact_hint_mobile"
                    android:inputType="number"
                    android:lines="1"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="visible"/>


                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/ic_edit"
                    android:drawablePadding="@dimen/activity_margin_small"
                    android:drawableStart="@drawable/ic_edit"
                    android:gravity="top"
                    android:hint="@string/activity_contact_hint_message"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin"
                    android:background="@drawable/rounded_button"
                    android:elevation="@dimen/button_elevation"
                    android:gravity="center"
                    android:padding="@dimen/button_padding"
                    android:text="@string/activity_contact_button_submit"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_extra_large"
                    android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>